Zeigt Daten aus der Uploadmaske an

--- a/SimConnect/upload_jason/templates/success.html
+++ b/SimConnect/upload_jason/templates/success.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Upload erfolgreich!</h1>
-    <p>Die JSON-Daten wurden erfolgreich in die PostgreSQL-Datenbank gespeichert.</p>
+    <p>Die JSON-Daten wurden erfolgreich in die PostgreSQL-Datenbank gespeichert.</p><br><br>
+    <h4>
+        {{ testVersion }}
+    </h4>
     <!-- Weitere Inhalte oder Anpassungen können hier hinzugefügt werden -->
 </body>
 </html>
