Ü entfernt ggf für charset error

--- a/SimConnect/upload_jason/templates/success.html
+++ b/SimConnect/upload_jason/templates/success.html
@@ -11,6 +11,6 @@
     <h4>
         {{ testVersion }}
     </h4>
-    <!-- Weitere Inhalte oder Anpassungen können hier hinzugefügt werden -->
+    <!-- Weitere Inhalte oder Anpassungen können hier hinzugefgt werden -->
 </body>
 </html>
