--- a/SimConnect/upload_jason/templates/success.html
+++ b/SimConnect/upload_jason/templates/success.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload erfolgreich</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}" >
 </head>
 <body>
     <h1>Upload erfolgreich!</h1>
@@ -11,6 +12,5 @@
     <h4>
         {{ testVersion }}
     </h4>
-    <!-- Weitere Inhalte oder Anpassungen können hier hinzugefgt werden -->
 </body>
 </html>
