--- a/SimConnect/upload_jason/templates/test.html
+++ b/SimConnect/upload_jason/templates/test.html
@@ -8,5 +8,9 @@
 <body>
     test.......................................................<br><br>
     {{ data }}
+
+    <svg width="100" height="100">
+        <path class="_sw1 css-jzojre" d="M152.6796529158545 205.75664844834776L 256 205.75664844834776L256 294.2809207131368L152.6796529158545 294.2809207131368 Z" fill="transparent" stroke="red"></path>
+    </svg>
 </body>
 </html>
