add 301 to other subdomain, type standardisation

--- a/SimConnect/upload_jason/templates/success.html
+++ b/SimConnect/upload_jason/templates/success.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload erfolgreich</title>
-    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}" >
 </head>
 <body>
     <h1>Upload erfolgreich!</h1>
     <p>Die JSON-Daten wurden erfolgreich in die PostgreSQL-Datenbank gespeichert.</p><br><br>
     <h4>
-        {{ testVersion }}
+        {{ data }}
     </h4>
 </body>
 </html>
