--- a/SimConnect/upload_jason/templates/success.html
+++ b/SimConnect/upload_jason/templates/success.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Upload erfolgreich!</h1>
-    <p>Die JSON-Daten wurden erfolgreich in die PostgreSQL-Datenbank gespeichert.</p><br><br>
+    <p>Die JSON-Daten wurden erfolgreich in der PostgreSQL-Datenbank gespeichert.</p><br><br>
     <h4>
         {{ data }}
     </h4>
