--- a/SimConnect/upload_jason/templates/upload.html
+++ b/SimConnect/upload_jason/templates/upload.html
@@ -1,17 +1,53 @@
 <!DOCTYPE html>
-
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload</title>
+    <style>
+        body {
+            background-color: #121212;
+            color: #ffffff;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 50px;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        input {
+            margin-bottom: 20px;
+            padding: 10px;
+            background-color: transparent;
+            color: #ffffff;
+            font-size: 16px;
+        }
+
+        button {
+            padding: 10px 20px;
+            background-color: #007acc;
+            color: #ffffff;
+            border: none;
+            cursor: pointer;
+            font-size: 18px;
+            transition: 0.1s ease-in;
+            border-radius: 1em;
+        }
+
+        button:hover {
+            background-color: #005a8c;
+        }
+    </style>
 </head>
 <body>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <input type="file" accept=".json" name="json_file" required>
-        <button type="submit">Hochladen</button>
+        <button type="submit">Upload</button>
     </form>
 </body>
 </html>
-
