Add Open Graph meta tags and update theme color

--- a/SimConnect/root/templates/index.html
+++ b/SimConnect/root/templates/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to SimConnect</title>
+
+    <!-- embed tags -->
+    <meta content="SimConnect" property="og:title" />
+    <meta content="Software to analyze and rate a pilot's flying capabilities utilizing the power of AI" property="og:description" />
+    <meta content="https://simconnect.gutscheweb.com/" property="og:url" />
+    <meta content="https://simconnect.gutscheweb.com/favicon.ico" property="og:image" />
+    <meta content="#007acc" data-react-helmet="true" name="theme-color" />
+
+
     <style>
         body {
             background-color: #121212;
