Update page titles and metadata for FlightSense + JSON formatting

--- a/SimConnect/root/templates/index.html
+++ b/SimConnect/root/templates/index.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to SimConnect</title>
+    <title>Welcome to FlightSense</title>
 
     <!-- embed tags -->
-    <meta content="SimConnect" property="og:title" />
+    <meta content="FlightSense" property="og:title" />
     <meta content="Software to analyze and rate a pilot's flying capabilities utilizing the power of AI" property="og:description" />
     <meta content="https://simconnect.gutscheweb.com/" property="og:url" />
-    <meta content="https://simconnect.gutscheweb.com/favicon.ico" property="og:image" />
+    <meta content="https://simconnect.gutscheweb.com/api/v1/serve-image?text=FlightSense" property="og:image" />
     <meta content="#007acc" data-react-helmet="true" name="theme-color" />
-
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Welcome to FlightSense" />
+    <meta name="twitter:description" content="Software to analyze and rate a pilot's flying capabilities utilizing the power of AI" />
+    <meta name="twitter:image" content="https://simconnect.gutscheweb.com/api/v1/serve-image?text=FlightSense" />
 
     <style>
         body {
@@ -39,7 +42,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to SimConnect</h1>
+    <h1>Welcome to FlightSense</h1>
     <p>- WIP -</p>
     <button onclick="window.location = '/upload_jason'">Upload JSON</button>
 </body>
